<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="270dp"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/top_background" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="150dp"
                    android:layout_height="220dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:srcCompat="@drawable/women1" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:text="@string/create_account"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="33dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/your_name"
                android:textSize="18sp"
                android:textColor="#2f3363"
                android:textStyle="bold"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"/>

            <EditText
                android:id="@+id/edtName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="8dp"
                android:hint="@string/enter_name"
                android:padding="8dp"
                android:textSize="16sp"
                android:textColor="#A2A4b5"
                android:ems="10"
                android:inputType="textPersonName"
                android:background="@drawable/background_edit" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/your_email"
                android:textSize="18sp"
                android:textColor="#2f3363"
                android:textStyle="bold"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"/>

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="8dp"
                android:hint="@string/enter_email"
                android:padding="8dp"
                android:textSize="16sp"
                android:textColor="#A2A4b5"
                android:ems="10"
                android:inputType="textPersonName"
                android:background="@drawable/background_edit" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mobile_number"
                android:textSize="18sp"
                android:textColor="#2f3363"
                android:textStyle="bold"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"/>

            <EditText
                android:id="@+id/edtMobile"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="8dp"
                android:hint="@string/enter_mobile"
                android:padding="8dp"
                android:textSize="16sp"
                android:textColor="#A2A4b5"
                android:ems="10"
                android:inputType="textPhonetic"
                android:background="@drawable/background_edit" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/your_password"
                android:textSize="18sp"
                android:textColor="#2f3363"
                android:textStyle="bold"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"/>

            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="8dp"
                android:hint="@string/enter_password"
                android:padding="8dp"
                android:textSize="16sp"
                android:textColor="#A2A4b5"
                android:ems="10"
                android:inputType="textPassword"
                android:background="@drawable/background_edit" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="100dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="100dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/email_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/email" />

                <ImageView
                    android:id="@+id/google_btn"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/google" />
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="32dp"
                android:textSize="22sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:paddingStart="64dp"
                android:padding="4dp"
                style="@android:style/Widget.Button"
                android:background="@drawable/purple_button_bg"
                android:drawableEnd="@drawable/circle"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/login"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                style="@android:style/Widget.Button"
                android:textSize="16dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/purple_button_bg_1"
                android:text="@string/already_have_account" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>